--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,11 @@ body {
     .home-slide-paragraph {
         display: none;        
     }
+
+
+    .scroll-for-latest-paragraph {
+        text-align: center;
+    }
     
     
     .post img {
@@ -408,6 +413,10 @@ body {
         #posts-container::-webkit-scrollbar {
             display: block;
           }
+
+        .scroll-for-latest-paragraph {
+            display: none;
+        }
     
           .home-slide-paragraph {
             display: block;
@@ -683,6 +692,21 @@ body {
     
     }
     
+
+    .error-message {
+        color: #721c24; 
+        background-color: white; 
+        padding: 0.75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid black;
+        text-align: center;
+        width: 60%;
+        position: absolute;
+        top: 20px; 
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
     
     .error-message {
         
