--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
 
 /* --- General Styling ----------------------------------------------------------------------*/
-
+/*  #FFFFCC, #CCCCCC*/
 
 body {
     margin: 0;
     align-items: center;
+    background-color: #fefeff;
+
+
     }
     
     h1, h2 {
         font-family: 'Cormorant SC', serif;
         text-align: center;
-        font-weight: 300;
+        font-weight: 500;
     }
     
     p {
@@ -19,12 +22,13 @@ body {
     
     hr {
         height: 2px;
-        background-color: black;
+        background-color: #161412;
         border: none;
     }
     
     img {
       align-content: center;
+      margin: 0 auto;
     }
     
 
@@ -74,7 +78,7 @@ body {
     .search-bar input {
         width: 100%;
         padding: 0.5em;
-        border: 1px solid white;
+        border: 2px solid #fefeff;
         border-radius: 20px;
         background-color: #7a726b; 
         color: #333;
@@ -158,7 +162,7 @@ body {
     
     
     .hamburger-menu {
-        color: white;
+        color: #fefeff;
         cursor: pointer;
         font-size: 2em; 
         background-color: transparent;
@@ -177,15 +181,20 @@ body {
         width: 250px; 
         right: 0;
     }
+
+    .header-nav-links {
+        font-weight: 500;
+    }
     
     .menu-links.active {
         display: block;
         border: 1px transparent;
+        
     }
     
     .menu-links a:hover {
-        border: 1px solid white;
-        color: white;
+        border: 1px solid #fefeff;
+        color: #fefeff;
     }
     
     .dropdown-menu {
@@ -197,7 +206,7 @@ body {
         padding: 15px 20px; 
         text-decoration: none;
         display: block;
-        color: white;
+        color: #fefeff;
         font-size: 16px; 
         text-align: center;
         align-items: center;
@@ -209,7 +218,7 @@ body {
     
     
     
-    @media screen and (max-width: 950px) {
+    @media screen and (max-width: 1050px) {
         .hamburger-menu {
             display: block; 
         }
@@ -255,7 +264,7 @@ body {
     .header-nav-links a {
         display: inline-block;
         padding: 0.5em 3em;
-        color: black;
+        color: #161412;
         text-align: center;
         text-decoration: none;
         font-family: 'Cormorant SC', serif;
@@ -263,9 +272,9 @@ body {
     }
     
     .header-nav-links a:hover {
-        background-color: white;
+        background-color: #fefeff;
         cursor: pointer;
-        border: 1px solid black;
+        border: 1px solid #161412;
     }
     
     @media (max-width: 950px) {
@@ -285,7 +294,7 @@ body {
     
     .loader {
         
-        color: #000;
+        color: #161412;
         text-align: center;
         position: fixed; 
         top: 70%;
@@ -322,7 +331,7 @@ body {
         left: 50%;
         width: 4px;
         height: 4px;
-        background: black;
+        background: #161412;
         border-radius: 50%;
         animation: rise 5s infinite ease-in;
     }
@@ -565,8 +574,8 @@ body {
         padding-top: 1em;
         padding-bottom: 1em;
         position: fixed;
-        background-color: white;
-        border-top: 2px solid black;
+        background-color: #fefeff;
+        border-top: 2px solid #161412;
     }
     
     .grid-container a {
@@ -574,14 +583,14 @@ body {
         text-decoration: none;
         font-family: 'Lato', sans-serif;
         text-decoration: none;
-        color: black;
+        color: #161412;
         border: 1px transparent solid;
         padding: 0.5em;
     
     }
     
     .grid-container a:hover {
-        border: 1px solid black;
+        border: 1px solid #161412;
         padding: 0.5em;
     }
     
@@ -677,9 +686,9 @@ body {
     padding: 0.8em;
     font-size: 1.2em;
     background: none;
-    border: 1px solid black; 
+    border: 1px solid #161412; 
     cursor: pointer;
-    color: white;
+    color: #fefeff;
     background-color: #3b3530;
     transition: all 0.5s;
     margin: 0 auto;
@@ -693,10 +702,10 @@ display: none;
 
 
 #see-more-button:hover, #see-less-button:hover {
-    background-color: white;
+    background-color: #fefeff;
     box-shadow: #000;
     color: #3b3530;
-    border: 1px solid black;
+    border: 1px solid #161412;
 }
 
 
@@ -709,11 +718,11 @@ display: none;
     .about-us-container {
         position: relative;
         text-align: center;
-        color: white; 
+        color: #fefeff; 
     }
     
     .about-us-image {
-        width: 100vw;
+        width: 100%;
         height: 70vh;
         object-fit: cover; 
         padding-bottom: 5em;
@@ -731,7 +740,7 @@ display: none;
     
     
     .about-us-text h2, .about-us-text p {
-        color: #000;
+        color: #161412;
         padding: 10px;
     }
     
@@ -812,10 +821,10 @@ display: none;
     
     .error-message {
         color: #721c24; 
-        background-color: white; 
+        background-color: #fefeff; 
         padding: 20px;
         margin-bottom: 2em; 
-        border: 1px solid black; 
+        border: 1px solid #161412; 
         text-align: center; 
         font-weight: bold; 
         margin: 0 auto;
@@ -831,7 +840,7 @@ display: none;
     
     .contact-us-image {
     
-        width: 100vw;
+        width: 100%;
         height: 50vh;
         object-fit: cover;
     }
@@ -852,7 +861,7 @@ display: none;
     
     
     .form-container {
-        border: 1px solid black;
+        border: 1px solid #161412;
         margin: 0 auto;
         max-width: 70%;
         font-family: 'Lato', sans-serif;
@@ -863,7 +872,7 @@ display: none;
     
     form {
         padding: 1em;
-        border: 1px solid black;
+        border: 1px solid #161412;
     }
     
     .form-group {
@@ -883,13 +892,13 @@ display: none;
         width: 320px;
         padding: 10px;
         font-size: 20px;
-        color: #000;
+        color: #161412;
         margin-bottom: 4px;
        
     }
 
     .form-group input {
-        outline: 0.5px solid black;
+        outline: 0.5px solid #161412;
         width: 80%;
     }
     
@@ -915,18 +924,18 @@ display: none;
         padding: 0.8em;
         font-size: 1.2em;
         background: none;
-        border: 1px solid black; 
+        border: 1px solid #161412; 
         cursor: pointer;
-        color: white;
+        color: #fefeff;
         background-color: #3b3530;
         transition: all 0.5s;
     }
     
     .submit-button:hover {
-        background-color: white;
+        background-color: #fefeff;
         box-shadow: #000;
         color: #3b3530;
-        border: 1px solid black;
+        border: 1px solid #161412;
     }
     
     .hidden {
